--- a/Pratica 2/html/pratica_2.html
+++ b/Pratica 2/html/pratica_2.html
@@ -169,7 +169,7 @@ figure;
 bar(x_n);
 title(<span class="string">'bar'</span>);
 </pre>
-<img vspace="5" hspace="5" src="pratica_2_04.png" alt=""> <img vspace="5" hspace="5" src="pratica_2_05.png" alt=""> <img vspace="5" hspace="5" src="pratica_2_06.png" alt=""> <img vspace="5" hspace="5" src="pratica_2_07.png" alt=""> <h2 id="5">Ex03</h2>
+<img vspace="5" hspace="5" src="pratica_2_05.png" alt=""> <img vspace="5" hspace="5" src="pratica_2_06.png" alt=""> <img vspace="5" hspace="5" src="pratica_2_07.png" alt=""> <h2 id="5">Ex03</h2>
 <pre class="codeinput">y = zeros(1,3);
 
 <span class="comment">% Y[0] = x[n-1] + 2y[n-1]</span>
@@ -206,7 +206,7 @@ figure;
 n = 0:9;
 stem(n,y);
 </pre>
-<img vspace="5" hspace="5" src="pratica_2_08.png" alt=""> <img vspace="5" hspace="5" src="pratica_2_09.png" alt=""> <p class="footer">
+<img vspace="5" hspace="5" src="pratica_2_09.png" alt=""> <p class="footer">
 <br>
 <a href="https://www.mathworks.com/products/matlab/">Published with MATLAB&reg; R2024a</a>
 <br>
