--- a/Pratica 3/html/pratica_3.html
+++ b/Pratica 3/html/pratica_3.html
@@ -197,7 +197,7 @@ num/den =
 <h2 id="7">Ex02 B</h2>
 <pre class="codeinput">ltiview(T);
 </pre>
-<img vspace="5" hspace="5" src="pratica_3_02.png" alt=""> <img vspace="5" hspace="5" src="pratica_3_03.png" alt=""> <h2 id="8">Ex02 C</h2>
+ <img vspace="5" hspace="5" src="pratica_3_03.png" alt=""> <h2 id="8">Ex02 C</h2>
 <pre class="codeinput">t = 0:0.1:10;
 c=step(C,t);
 g=step(G,t);
