--- a/Pratica 11/html/Pratica 11.html
+++ b/Pratica 11/html/Pratica 11.html
@@ -79,7 +79,9 @@ table td { padding:7px 5px; text-align:left; vertical-align:top; border:1px soli
 <h1>Laborat&oacute;rio de Sistemas Din&acirc;icos</h1>
 <!--introduction-->
 <p>Pr&aacute;tica 11 22/08/2024 Autores: Victor Hugo Daia Lorenzato e Whilker Henrique Santos Silva</p>
-
+<pre class="codeoutput error">Error using evalin
+Undefined function 'Pratica' for input arguments of type 'char'.
+</pre>
 <!--/introduction-->
 <h2>Contents</h2>
 <div>
@@ -200,7 +202,7 @@ grid <span class="string">on</span>;
 <!--
 ##### SOURCE BEGIN #####
 %% Laboratório de Sistemas Dinâicos
-% Prática 08
+% Prática 11
 % 22/08/2024
 % Autores: Victor Hugo Daia Lorenzato e Whilker Henrique Santos Silva
 
